--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>Pragprog Booksオンラインストア</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body class='<%= controller.controller_name %>'>
+  <div id="banner">
+    <%= image_tag("logo.png") %>
+    <%= @page_title || "Pragmatic Bookshelf" %>
+  </div>
+  <div id="columns">
+    <div id="side">
+      <div id="cart">
+        <% if @cart %>
+          <%= hidden_div_if(@cart.line_items.empty?, id:'cart') do %>
+            <%= render @cart %>
+          <% end %>
+        <% end %>
+      </div>
+      <ul>
+        <li><a href="">ホーム</a></li>
+        <li><a href="">ホーム</a></li>
+        <li><a href="">ホーム</a></li>
+        <li><a href="">ホーム</a></li>        
+      </ul>
+    </div>
+  </div>
+  <div id="main">
+    <%= yield %>    
+  </div>
 
-<%= yield %>
 
 </body>
 </html>
